# hydra

./: CMakeLists.txt  LICENSE.md  README.md
include/HydraRuntime/: BitSet.h  BitSet.inl  Core.h  HydraRuntime.h  Logger.h  PermutationManager.h  PermutationSets.h  Result.h
include/HydraTools/: Evaluator.h  FileCache.h  FileLocator.h  PermutableText.h  PermutationShader.h  PermutationShaderLibrary.h  PermutationVariableLoader.h  TextSectionizer.h  Tokenizer.h
sample/: HydraSample.cpp
sample/data/: Example.hydra  PermutationVariables.json  Shared.hydra
src/HydraRuntime/: BitSet.cpp  Core.cpp  Logger.cpp  PermutationManager.cpp  PermutationSets.cpp
src/HydraTools/: Evaluator.cpp  FileCache.cpp  FileLocator.cpp  PermutableText.cpp  PermutationShaderLibrary.cpp  PermutationShaderLoading.cpp  PermutationShaderUsage.cpp  PermutationVariableLoader.cpp  StringUtils.cpp  StringUtils.h  TextSectionizer.cpp  Tokenizer.cpp
unittests/: RuntimeTest.cpp  RuntimeTest.h  ToolsTest.cpp  ToolsTest.h  UnitTests.cpp
